<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bidding For Charities</string>
    <string name="login_text">Login</string>
    <string name="register_text">Sign Up</string>
    <string name="account_text">My Info</string>
    <string name="watchlist_text">My Watchlist</string>
    <string name="bids_text">My Bids</string>
    <string name="auctions_text">My Auctions</string>
    <string name="create_text">New Auction</string>
    <string name="categories_text">Seller Categories</string>
    <string name="folder_text">Seller Folders</string>
    <string name="returnpolicy_text">Seller Return Policies</string>
    <string name="search_text">Search Auctions</string>
    <string name="request_text">Request Charity</string>
    <string name="action_settings">Settings</string>

    <string name="home_text">Home</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_message">Welcome To Bidding For Charities!</string>

    <string name="login_uname">Email Address or Username</string>
    <string name="login_pass">Password</string>
    <string name="login_forgot">forgot my password</string>

    <string name="register_email">Email Address</string>
    <string name="register_pass">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_first">First Name</string>
    <string name="register_last">Last Name</string>
    <string name="register_code">Enter security code</string>

    <string-array name="nav_menu_items">
        <item>@string/account_text</item>
        <item>@string/watchlist_text</item>
        <item>@string/bids_text</item>
        <item>@string/auctions_text</item>
        <item>@string/create_text</item>
        <item>@string/search_text</item>
        <item>@string/request_text</item>
    </string-array>

    <string-array name="nav_menu_icons">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_visibility_white_48dp</item>
        <item>@drawable/ic_shopping_cart_white_48dp</item>
        <item>@drawable/ic_description_white_48dp</item>
        <item>@drawable/ic_note_add_white_48dp</item>
        <item>@drawable/ic_search_white_48dp</item>
        <item>@drawable/ic_action_mail</item>
    </string-array>

    <string name="desc_list_item_icon">Item Icon</string>

    <string name="home_items_to_checkout_negative">There are no items to be checked out.</string>
    <string name="home_items_to_checkout_positive">You have items to be checked out!</string>
    <string name="home_invoice_to_pay_negative">You have no unpaid invoices.</string>
    <string name="home_invoice_to_pay_positive">You have unpaid invoices!</string>
    <string name="home_messages_to_read_negative">You have no unread messages.</string>
    <string name="home_messages_to_read_positive">You have unread messages!</string>
    <string name="home_bidding_on_items_negative">You have no active bids.</string>
    <string name="home_bidding_on_items_positive">You have active bids!</string>

    <string-array name="account_tab_items">
        <item name="account_name">My Name</item>
        <item name="account_username">My Username</item>
        <item name="account_email">My Email</item>
        <item name="account_address">My Address</item>
    </string-array>

    <string name="account_first_name">First Name</string>
    <string name="account_last_name">Last Name</string>
    <string name="account_username">User Name</string>
    <string name="account_current_email">Current email</string>
    <string name="account_new_email">New email</string>
    <string name="account_confirm_email">Confirm new email</string>
    <string name="account_password">Enter password</string>
    <string name="account_address_email">Email</string>
    <string name="account_address_company">Company</string>
    <string name="account_address_first">First</string>
    <string name="account_address_last">Last</string>
    <string name="account_address_street1">Street</string>
    <string name="account_address_street2">Street (Extra)</string>
    <string name="account_address_city">City</string>
    <string name="account_address_country">Country</string>
    <string name="account_address_state">State</string>
    <string name="account_address_zip">Zip</string>
    <string name="account_address_phone">Phone</string>
    <string name="update_button">Update</string>

    <string name="search_title_hint">Search by Title</string>
    <string name="search_category_label">Select Category</string>
    <string name="search_page_label">Select Page</string>
    <string name="search_srt_label">Select Sort</string>
    <string name="search_button">Search</string>

    <string-array name="search_page_items">
        <item>25 items per Page</item>
        <item>50 items per Page</item>
        <item>100 items per Page</item>
    </string-array>

    <string-array name="search_sort_items">
        <item name="sort_hint">Select Sort</item>
        <item>Sort by Title</item>
        <item>Time ending soonest</item>
        <item>Time newly listed</item>
        <item>Price + Shipping lowest first</item>
        <item>Price + Shipping highest first</item>
        <item>Price lowest first</item>
        <item>Price highest first</item>
    </string-array>

    <string name="list_title_default">item_title</string>
    <string name="list_end_time_label">Ends:\u0020</string>
    <string name="list_end_time_default">00:00:00</string>
    <string name="list_high_bid_default">$0.00</string>
    <string name="list_image_description">Auction Item</string>
    <string name="list_bidder_description">Highest Bidder</string>

    <string name="edit_item_button">Edit Your Item</string>
    <string name="item_seller_label">Seller:\u0020</string>
    <string name="item_seller_default">seller_name</string>
    <string name="item_description_default">item_description</string>
    <string name="item_time_label">Time Left:\u0020</string>
    <string name="item_time_default">remaining_time</string>
    <string name="item_endtime_label">\@\u0020</string>
    <string name="item_endtime_default">end_timestamp</string>
    <string name="item_bid_label">Current Bid:\u0020</string>
    <string name="item_bid_default">current_bid</string>
    <string name="item_totalbids_label">\u0020Total Bids:\u0020</string>
    <string name="item_totalbids_default">total_bids</string>
    <string name="bid_title_text">Bid Amount</string>
    <string name="item_placebid_button">Place Bid</string>
    <string name="item_shipping_label">Shipping:\u0020</string>
    <string name="item_shipping_default">shipping_price</string>
    <string name="item_watchlist_add_button">Add to Watchlist</string>
    <string name="item_watchlist_remove_button">Remove from Watchlist</string>
    <string name="item_share_button">Email a Friend</string>
    <string name="item_contact_button">Contact Seller</string>

    <string name="setting_edit_button">Edit</string>
    <string name="setting_delete_button">Delete</string>
    <string name="setting_dialog_label">Name</string>
    <string name="setting_dialog_extralabel">Details</string>
    <string name="setting_dialog_button">Submit</string>

    <string name="category_add_button">Add Category</string>
    <string name="folder_add_button">Add Folder</string>
    <string name="returnpolicy_add_button">Add Return Policy</string>

    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="create_folder">Folder</string>
    <string name="create_sku">SKU</string>
    <string name="create_inventory_quantity">Inventory Qty</string>
    <string name="create_category_one">Category 1</string>
    <string name="create_category_two">Category 2</string>
    <string name="create_auction_quantity">Auction Qty</string>
    <string name="create_min_bid">Min Bid</string>
    <string name="create_auction_reserve">Auction Reserve</string>
    <string name="create_shipping">Shipping</string>
    <string name="create_shipping_add">Additional Shipping</string>
    <string name="create_return_policy">Return Policy</string>
    <string name="create_start_date">Start Auction Date</string>
    <string name="create_start_time">Start Auction Time</string>
    <string name="create_end_date">End Auction Date</string>
    <string name="create_end_time">End Auction Time</string>

    <string name="create_inventory_default">1</string>
    <string name="create_date_default">Set Date</string>
    <string name="create_time_default">Set Time</string>

    <string name="create_button">Save Item</string>

    <string name="request_description">Application to run charity auctions</string>
    <string name="request_email_label">Email Address:</string>
    <string name="request_name_label">Your Name:</string>
    <string name="request_phone_label">Phone:</string>
    <string name="request_company_label">Company:</string>
    <string name="request_address_label">Address:</string>
    <string name="request_city_label">City:</string>
    <string name="request_state_label">State:</string>
    <string name="request_zip_label">Zip:</string>
    <string name="request_button">Send Request</string>

    <string name="background">Background Image</string>
    <string name="generic_error">Error Retrieving Data</string>
    <string name="unimplemented_error">Feature Coming Soon!</string>
    <string name="place_bid_error">Could not place bid</string>
    <string name="empty_return_error">No Items Found</string>
</resources>