<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/account_address_email"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_email"
            style="@style/FormInputStyle"
            android:inputType="textEmailAddress"
            android:maxLength="100" />

        <TextView
            android:text="@string/account_address_company"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_company"
            style="@style/FormInputStyle"
            android:maxLength="50" />

        <TextView
            android:text="@string/account_address_first"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_first"
            style="@style/FormInputStyle"
            android:inputType="textPersonName"
            android:maxLength="45" />

        <TextView
            android:text="@string/account_address_last"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_last"
            style="@style/FormInputStyle"
            android:inputType="textPersonName"
            android:maxLength="45" />

        <TextView
            android:text="@string/account_address_street1"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_street1"
            style="@style/FormInputStyle"
            android:inputType="textPostalAddress"
            android:maxLength="100" />

        <TextView
            android:text="@string/account_address_street2"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_street2"
            style="@style/FormInputStyle"
            android:inputType="textPostalAddress"
            android:maxLength="100" />

        <TextView
            android:text="@string/account_address_city"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_city"
            style="@style/FormInputStyle"
            android:maxLength="75" />

        <TextView
            android:text="@string/account_address_country"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_country"
            style="@style/FormInputStyle"
            android:maxLength="100" />

        <TextView
            android:text="@string/account_address_state"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_state"
            style="@style/FormInputStyle"
            android:maxLength="50" />

        <TextView
            android:text="@string/account_address_zip"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_zip"
            style="@style/FormInputStyle"
            android:inputType="number"
            android:maxLength="20" />

        <TextView
            android:text="@string/account_address_phone"
            style="@style/FormLabelStyle"/>

        <EditText
            android:id="@+id/account_address_phone"
            style="@style/FormInputStyle"
            android:inputType="phone"
            android:maxLength="20" />

        <Button
            android:id="@+id/update_address_button"
            style="@style/FormSubmitStyle"
            android:text="@string/update_button" />

    </LinearLayout>

</ScrollView>