<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/american_flags"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        android:src="@drawable/american_flags" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Title Banner -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/glass_background"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageButton
                android:id="@+id/nav_drawer_expand"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingRight="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_drawer"/>

            <TextView
                android:id="@+id/banner"
                style="@style/CustomTitleTextStyle"
                android:text="@string/create_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right">

                <include
                    layout="@layout/vertical_seperator" />

                <Button
                    android:id="@+id/home_button"
                    style="@style/CustomTitleTextStyle"
                    android:text="@string/home_text" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.DrawerLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Main Content -->
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:text="@string/create_title"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_title"
                        style="@style/FormInputStyle"
                        android:inputType="textAutoCorrect"
                        android:maxLength="300" />

                    <TextView
                        android:text="@string/create_description"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_description"
                        style="@style/FormInputStyle"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:gravity="left|top"
                        android:inputType="textMultiLine"
                        android:maxLength="1000"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <TextView
                        android:text="@string/create_folder"
                        style="@style/FormLabelStyle" />

                    <Spinner
                        android:id="@+id/create_folder"
                        style="@style/FormSpinnerStyle"
                        android:layout_marginTop="0dp"/>

                    <TextView
                        android:text="@string/create_sku"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_sku"
                        style="@style/FormInputStyle"
                        android:inputType="textCapCharacters"
                        android:maxLength="45"/>

                    <TextView
                        android:text="@string/create_inventory_quantity"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_inventory_quantity"
                        style="@style/FormInputStyle"
                        android:text="@string/create_inventory_default"
                        android:layout_marginBottom="15dp"
                        android:inputType="number"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <TextView
                        android:text="@string/create_category_one"
                        style="@style/FormLabelStyle"/>

                    <Spinner
                        android:id="@+id/create_category_one"
                        style="@style/FormSpinnerStyle"
                        android:layout_marginTop="0dp"/>

                    <TextView
                        android:text="@string/create_category_two"
                        style="@style/FormLabelStyle"/>

                    <Spinner
                        android:id="@+id/create_category_two"
                        style="@style/FormSpinnerStyle"
                        android:layout_marginTop="0dp"/>

                    <TextView
                        android:text="@string/create_auction_quantity"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_auction_quantity"
                        style="@style/FormInputStyle"
                        android:text="@string/create_inventory_default"
                        android:inputType="number"/>

                    <TextView
                        android:text="@string/create_min_bid"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_min_bid"
                        style="@style/FormInputStyle"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:text="@string/create_auction_reserve"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_auction_reserve"
                        style="@style/FormInputStyle"
                        android:layout_marginBottom="15dp"
                        android:inputType="numberDecimal" />

                    <include
                        layout="@layout/horizontal_seperator" />

                    <TextView
                        android:text="@string/create_shipping"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_shipping"
                        style="@style/FormInputStyle"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:text="@string/create_shipping_add"
                        style="@style/FormLabelStyle"/>

                    <EditText
                        android:id="@+id/create_shipping_add"
                        style="@style/FormInputStyle"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:text="@string/create_return_policy"
                        style="@style/FormLabelStyle"/>

                    <Spinner
                        android:id="@+id/create_return_policy"
                        style="@style/FormSpinnerStyle"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="15dp"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <TextView
                        android:text="@string/create_start_date"
                        style="@style/FormLabelStyle"/>

                    <TextView
                        android:id="@+id/create_start_date"
                        style="@style/FormInputStyle"
                        android:text="@string/create_date_default"/>

                    <TextView
                        android:text="@string/create_start_time"
                        style="@style/FormLabelStyle"/>

                    <TextView
                        android:id="@+id/create_start_time"
                        style="@style/FormInputStyle"
                        android:text="@string/create_time_default"/>

                    <TextView
                        android:text="@string/create_end_date"
                        style="@style/FormLabelStyle"/>

                    <TextView
                        android:id="@+id/create_end_date"
                        style="@style/FormInputStyle"
                        android:text="@string/create_date_default"/>

                    <TextView
                        android:text="@string/create_end_time"
                        style="@style/FormLabelStyle"/>

                    <TextView
                        android:id="@+id/create_end_time"
                        style="@style/FormInputStyle"
                        android:text="@string/create_time_default"/>

                    <Button
                        android:id="@+id/create_button"
                        style="@style/FormSubmitStyle"
                        android:text="@string/create_button" />

                </LinearLayout>

            </ScrollView>

            <!-- Side Navigation Drawer -->
            <include
                layout="@layout/navigation_menu"/>

        </android.support.v4.widget.DrawerLayout>

    </LinearLayout>

</RelativeLayout>

