<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/american_flags"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        android:src="@drawable/american_flags" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Title Banner -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/glass_background"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageButton
                android:id="@+id/nav_drawer_expand"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingRight="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_drawer"/>

            <TextView
                android:id="@+id/banner"
                style="@style/CustomTitleTextStyle"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right">

                <include
                    layout="@layout/vertical_seperator" />

                <Button
                    android:id="@+id/home_button"
                    style="@style/CustomTitleTextStyle"
                    android:text="@string/home_text"/>

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.DrawerLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Main Content -->
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbarThumbVertical="@drawable/scrollbar_vertical"
                android:scrollbarStyle="outsideOverlay">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="start"
                    android:background="@color/glass_background"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:src="@drawable/logo"/>

                    <Button
                        android:id="@+id/edit_item_button"
                        style="@style/FormSubmitStyle"
                        android:background="@drawable/highlighted_glass_button"
                        android:text="@string/edit_item_button"
                        android:visibility="gone"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/item_seller_label"/>

                        <TextView
                            android:id="@+id/seller_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_seller_default"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/item_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:text="@string/item_description_default"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/item_time_label"/>

                        <TextView
                            android:id="@+id/remaining_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_time_default"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/item_endtime_label"/>

                        <TextView
                            android:id="@+id/end_timestamp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_endtime_default"/>

                    </LinearLayout>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/item_bid_label"/>

                        <TextView
                            android:id="@+id/current_bid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_bid_default"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:textStyle="bold"
                            android:text="@string/item_totalbids_label"/>

                        <TextView
                            android:id="@+id/total_bids"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_totalbids_default"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/place_bid_button"
                        style="@style/FormSubmitStyle"
                        android:text="@string/item_placebid_button"/>

                    <include
                        layout="@layout/horizontal_seperator" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/item_shipping_label"/>

                        <TextView
                            android:id="@+id/shipping_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_shipping_default"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/watchlist_add_button"
                        style="@style/FormSubmitStyle"
                        android:background="@drawable/glass_button"
                        android:text="@string/item_watchlist_add_button"/>

                    <Button
                        android:id="@+id/watchlist_remove_button"
                        style="@style/FormSubmitStyle"
                        android:background="@drawable/tinted_glass_button"
                        android:text="@string/item_watchlist_remove_button"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/share_button"
                        style="@style/FormSubmitStyle"
                        android:background="@drawable/glass_button"
                        android:text="@string/item_share_button"/>

                    <Button
                        android:id="@+id/contact_button"
                        style="@style/FormSubmitStyle"
                        android:background="@drawable/glass_button"
                        android:text="@string/item_contact_button"/>

                </LinearLayout>

            </ScrollView>

            <!-- Side Navigation Drawer -->
            <include
                layout="@layout/navigation_menu"/>

        </android.support.v4.widget.DrawerLayout>

    </LinearLayout>

</RelativeLayout>